@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	7.7
-Entered-date:	2007-06-06
+Version:	7.6
+Entered-date:	2007-06-19
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v7.6 new -F flag; re-allow use of --security-freeze with other flags
 		v7.5 beef up warnings for -s1: Joe User should never use this flag!
 		v7.4 added CFA advanced timing info
 		v7.3 fixed version number; much better SAT compliance
@@ -61,7 +62,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		62K hdparm-7.5.tar.gz
+		62K hdparm-7.6.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
